[metadata]
name = cargo2ports
version = 0.1.0
url = https://github.com/herbygillot/cargo2ports
description = CLI tool to generate macports metadata for cargo crates
long_description_content_type = text/markdown
long_description = file: README.md
keywords = rust, cargo, macports
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: OS Independent

[options]
py_modules =
    cargo2ports
python_requires = >=3.6


[options.entry_points]
console_scripts =
    cargo2ports = cargo2ports:main

